Temporary removal of "fixed" from footer
Overlapped content

--- a/css/index.css
+++ b/css/index.css
@@ -132,7 +132,7 @@ body {
 }
 /* FOOTER */
 .footer {
-  position: fixed;
+  
   bottom: 0;
   left: 0;
   width: 100%;
